objects/Case.object
<CustomObject>
    <fields>
        <fullName>WT_Sub_Issue_Category__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Sub-Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WT_Issue_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Process</fullName>
                </value>
                <value>
                    <fullName>Loan Originator</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>Multiple/Duplicate Requests</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Payment Processing</fullName>
                </value>
                <value>
                    <fullName>Loss Mitigation</fullName>
                </value>
                <value>
                    <fullName>Escrows</fullName>
                </value>
                <value>
                    <fullName>Credit Reporting</fullName>
                </value>
                <value>
                    <fullName>On-Line</fullName>
                </value>
                <value>
                    <fullName>Banker</fullName>
                </value>
                <value>
                    <fullName>Disclosures</fullName>
                </value>
                <value>
                    <fullName>Posted wrong acct</fullName>
                </value>
                <value>
                    <fullName>Wires</fullName>
                </value>
                <value>
                    <fullName>Mobile/RDC</fullName>
                </value>
                <value>
                    <fullName>Not Working</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>APR</fullName>
                </value>
                <value>
                    <fullName>00 Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>01 Misrepresentation</fullName>
                </value>
                <value>
                    <fullName>02 Unauthorized Trading</fullName>
                </value>
                <value>
                    <fullName>03 Excessive Trading</fullName>
                </value>
                <value>
                    <fullName>04 Suitability</fullName>
                </value>
                <value>
                    <fullName>05 Failure to Follow Instructions</fullName>
                </value>
                <value>
                    <fullName>06 Documentation</fullName>
                </value>
                <value>
                    <fullName>07 Solicitation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Sub_Product_Type__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Sub-Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WT_Product_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>USDA</fullName>
                </value>
                <value>
                    <fullName>HE Loan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Every Day Loan</fullName>
                </value>
                <value>
                    <fullName>CD Secured</fullName>
                </value>
                <value>
                    <fullName>Unsecured</fullName>
                </value>
                <value>
                    <fullName>Overdraft Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Personal LOC</fullName>
                </value>
                <value>
                    <fullName>Auto/Vehicle</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Easy Access Loan</fullName>
                </value>
                <value>
                    <fullName>Easy Access LOC</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Checking/NOW</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Overdraft</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>On-Line Banking</fullName>
                </value>
                <value>
                    <fullName>Mobile Banking</fullName>
                </value>
                <value>
                    <fullName>Premium Financing</fullName>
                </value>
                <value>
                    <fullName>00 Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>01 Equity-Listed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Substantiated_for_FL_UDAAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Substantiated for FL/UDAAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Topic_ListView__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Employee Relations</fullName>
                </value>
                <value>
                    <fullName>Handbook</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Absence</fullName>
                </value>
                <value>
                    <fullName>VOE</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
                <value>
                    <fullName>Doculivery</fullName>
                    <isActive>false</isActive>
                    <label>Doculivery</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Topic_Text__c</fullName>
        <formula>Text(WT_Topic__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Employee Relations</fullName>
                </value>
                <value>
                    <fullName>Handbook</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Absence</fullName>
                </value>
                <value>
                    <fullName>VOE</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
                <value>
                    <fullName>401k</fullName>
                    <isActive>false</isActive>
                    <label>401k</label>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                    <isActive>false</isActive>
                    <label>Accounts Payable</label>
                </value>
                <value>
                    <fullName>Benefit</fullName>
                    <isActive>false</isActive>
                    <label>Benefit</label>
                </value>
                <value>
                    <fullName>Doculivery</fullName>
                    <isActive>false</isActive>
                    <label>Doculivery</label>
                </value>
                <value>
                    <fullName>Fusion</fullName>
                    <isActive>false</isActive>
                    <label>Fusion</label>
                </value>
                <value>
                    <fullName>Kronos</fullName>
                    <isActive>false</isActive>
                    <label>Kronos</label>
                </value>
                <value>
                    <fullName>Learning &amp; Development</fullName>
                    <isActive>false</isActive>
                    <label>Learning &amp; Development</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Vendor_Issue__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Vendor Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Verified_Resident_of_California__c</fullName>
        <label>Verified Resident of California</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Was_Claim_Substantiated__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Was Claim Substantiated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_myHR_Reactivation_Date__c</fullName>
        <description>Created as part of 371</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HR Case Reactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_myHR_Reactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of 371</description>
        <label>HR Case Reactivation</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>WT_CasesPublicGroup</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_Compliance_Complaint</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <role>Complaint_Manager</role>
            <role>Complaint_Processor</role>
            <role>Compliance_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Cases</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>WT_Bank_Entity__c</columns>
        <columns>WT_Latest_Reassigned_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Awaiting Approval</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_Compliance_Complaint</value>
        </filters>
        <label>Awaiting Approval Cases</label>
        <sharedTo>
            <role>Complaint_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chicago_Trust_Compliance</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 or 5 or 6)</booleanFilter>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_Compliance_Complaint</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Awaiting Approval</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Nicola Parsons</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Jean Bianchi</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Alyssa Lusky</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Jay Derbis</value>
        </filters>
        <label>Chicago Trust ( Compliance)</label>
        <sharedTo>
            <group>Chicago_Trust_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Team_Case</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Compliance Team</label>
        <queue>WT_Compliance_Team</queue>
        <sharedTo>
            <role>Complaint_Manager</role>
            <role>Complaint_Processor</role>
            <role>Compliance_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DK_HR_open_cases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>WT_Topic_ListView__c</columns>
        <columns>WT_Action_ListView__c</columns>
        <columns>WT_Contact_Date__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Cancelled,Fulfilled,Resolved,Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_MyHR</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>HR</value>
        </filters>
        <label>HR Unassigned Cases</label>
    </listViews>
    <listViews>
        <fullName>Escalated_Cases</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>WT_Action_ListView__c</columns>
        <columns>WT_Topic_ListView__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>WT_Contact_Date__c</columns>
        <columns>WT_Contact_Method__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Escalated</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_MyHR</value>
        </filters>
        <label>Escalated Cases</label>
    </listViews>
    <listViews>
        <fullName>High_Priority_Open_Cases_HR</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>WT_Contact_Date__c</columns>
        <columns>WT_Action_ListView__c</columns>
        <columns>WT_Topic_ListView__c</columns>
        <columns>WT_Contact_Method__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Resolved,Cancelled,Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_MyHR</value>
        </filters>
        <filters>
            <field>CASES.PRIORITY</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <label>High Priority Open Cases (HR)</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <group>WT_CasesPublicGroup</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Resolved,Cancelled</value>
        </filters>
        <label>My Open Cases</label>
        <sharedTo>
            <group>WT_CasesPublicGroup</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Active_Compliance_Cases</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>WT_Latest_Reassigned_Date__c</columns>
        <columns>WT_Bank_Entity__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_Compliance_Complaint</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Awaiting Approval</value>
        </filters>
        <label>My Active Cases</label>
        <sharedTo>
            <role>Complaint_Manager</role>
            <role>Complaint_Processor</role>
            <role>Compliance_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_LookUp_View</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>WT_Employee__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>WT_Contact_Date__c</columns>
        <columns>WT_Resolution_Time__c</columns>
        <columns>WT_Respond_By__c</columns>
        <columns>WT_Topic__c</columns>
        <columns>WT_Action__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>WT_Created_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_MyHR</value>
        </filters>
        <filters>
            <field>WT_Resolution_Time__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </filters>
        <filters>
            <field>WT_Topic__c</field>
            <operation>notEqual</operation>
            <value>Redirect</value>
        </filters>
        <label>My LookUp View</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Cases_Compliance</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_Compliance_Complaint</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Awaiting Approval</value>
        </filters>
        <label>My Open Cases ( Compliance)</label>
        <sharedTo>
            <role>Complaint_Manager</role>
            <role>Complaint_Processor</role>
            <role>Compliance_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Cases_HR</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>WT_Topic_ListView__c</columns>
        <columns>WT_Action_ListView__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>WT_Contact_Date__c</columns>
        <columns>WT_Contact_Method__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Resolved,Cancelled,Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.WT_MyHR</value>
        </filters>
        <label>My Open Cases (HR)</label>
        <sharedTo>
            <role>MyHR_Employee</role>
            <role>MyHR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Resolved_Cases</fullName>
        <columns>WT_Case_Title__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>WT_Latest_Reassigned_Date__c</columns>
        <columns>WT_Bank_Entity__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </filters>
        <label>My Resolved Cases</label>
        <sharedTo>
            <group>WT_CasesPublicGroup</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>WT_CCPA</fullName>
        <active>true</active>
        <businessProcess>CCPA</businessProcess>
        <label>CCPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Compliance_Complaint</fullName>
        <active>true</active>
        <businessProcess>Compliance Complaint</businessProcess>
        <label>Compliance Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_MyHR</fullName>
        <active>true</active>
        <businessProcess>MyHR</businessProcess>
        <label>MyHR</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CancelComplianceCasebyComplaintManagers</fullName>
        <active>true</active>
        <description>As a member of &apos;Queue of Complaint Managers&apos;, I should have an ability to Cancel a case from Awaiting Approval status.Notes field is mandatory when cancelling a case.
Owner should not be allowed to cancel a case.</description>
        <errorConditionFormula>IF( AND( $Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c , 
NOT(OR($Profile.Name = &apos;WT Business Administrator&apos; ,   $Profile.Name = &apos;WT Technical Administrator&apos;,  $Profile.Name = &apos;System Administrator&apos; ) ),
ISPICKVAL( Status , &apos;Cancelled&apos;),ISCHANGED( Status ),RecordType.Name = &apos;Compliance Complaint&apos;) ,
OR(  $User.Id = OwnerId , NOT(ISPICKVAL( PRIORVALUE( Status ) , &apos;Awaiting Approval&apos;)) ,  $UserRole.Name != &apos;Complaint Manager&apos;  ), FALSE)</errorConditionFormula>
        <errorMessage>Prior Status value should be &apos;Awaiting approval&apos; in order to &apos;Cancel&apos; the Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Email_Validation_Rule</fullName>
        <active>true</active>
        <description>Validation Rule To Prevent Specific Email Addresses from creating a new SF MY HR Case.</description>
        <errorConditionFormula>OR(SuppliedEmail = &apos;cignaleavenotifications@cignaleavesolutions.com&apos;,SuppliedEmail = &apos;EFILE-UIS-ONCALL@UISMETLIFE.US&apos;,SuppliedEmail = &apos;donotreply@eyemedvisioncare.com&apos;,SuppliedEmail = &apos;BCBSIL_noreply@bcbsil.com&apos;,SuppliedEmail = &apos;EmployerSetup@mybenefitwallet.com&apos;,SuppliedEmail = &apos;surveymonkey@t.outbound.surveymonkey.com&apos;,SuppliedEmail = &apos;sailpoint-noreply@wintrust.com&apos;,SuppliedEmail = &apos;employeecommunications@wintrust.com&apos;, SuppliedEmail = &apos;eisbethlehem@cigna.com&apos;, SuppliedEmail = &apos;clbproductionsupport@cigna.com&apos;, SuppliedEmail = &apos;EFILE-UIS-ONCALL@uismetlife.us&apos;, SuppliedEmail = &apos;noreply@wintrust.com&apos;, SuppliedEmail = &apos;BCBS_Eligibility_IL@bcbsil.com&apos;, SuppliedEmail = &apos;EmployerSetup@mybenefitwallet.com&apos;, SuppliedEmail = &apos;gbsleavenotifications@cignaleavesolutions.com&apos;, SuppliedEmail = &apos;efile-uis-oncall@uismetlife.us&apos;, SuppliedEmail = &apos;employersetup@mybenefitwallet.com&apos;, SuppliedEmail = &apos;gbsleavenotifications@newyorklife.com&apos;, SuppliedName = &apos;Mail Delivery Subsystem&apos;)</errorConditionFormula>
        <errorMessage>Cannot create a new case with the specified sender.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReActivateComplianceCasebyManagers</fullName>
        <active>true</active>
        <description>ReActivate Compliance Case by Complaint Managers</description>
        <errorConditionFormula>IF( AND( $Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c , 
NOT(OR($Profile.Name = &apos;WT Business Administrator&apos; , $Profile.Name = &apos;WT Technical Administrator&apos;, $Profile.Name = &apos;System Administrator&apos; ) ),
ISCHANGED( Status )) ,AND( RecordType.Name = &apos;Compliance Complaint&apos; ,  ISPICKVAL( PRIORVALUE( Status ) , &apos;Resolved&apos;) , ISPICKVAL( Status , &apos;In Progress&apos;),    $UserRole.Name  != &apos;Complaint Manager&apos; ), FALSE)</errorConditionFormula>
        <errorMessage>Only a compliant manager can change the status of a compliance case from resolved back to in progress.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Compliance_Case_Owner_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c,NOT(OR($Profile.Name = &apos;WT Business Administrator&apos; , $Profile.Name = &apos;WT Technical Administrator&apos;, $Profile.Name = &apos;System Administrator&apos; ) ),ISCHANGED( OwnerId ),ISPICKVAL( Status, &apos;Awaiting Approval&apos;),$UserRole.Name != &apos;Complaint Manager&apos;)</errorConditionFormula>
        <errorMessage>You do not have permission to change the owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Consumer_Email_Address_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c , ISPICKVAL(WT_Report_Delivery_Method__c, &apos;Secure Email&apos;),
OR(ISNULL(WT_Consumer_Email_Address__c),ISBLANK(WT_Consumer_Email_Address__c)))</errorConditionFormula>
        <errorDisplayField>WT_Consumer_Email_Address__c</errorDisplayField>
        <errorMessage>Please provide the Consumer Email Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Consumer_Mailing_Address_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c , ISPICKVAL(WT_Report_Delivery_Method__c, &apos;USPS Mail&apos;),
OR(ISNULL( WT_Consumer_Mailing_Address__c), ISBLANK(WT_Consumer_Mailing_Address__c) )
)</errorConditionFormula>
        <errorDisplayField>WT_Consumer_Mailing_Address__c</errorDisplayField>
        <errorMessage>Please provide the Consumer Mailing Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Customer_Is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND($RecordType.Name == &apos;Compliance Complaint&apos;,
$Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c,NOT(OR($Profile.Name = &apos;WT Business Administrator&apos; , $Profile.Name = &apos;WT Technical Administrator&apos;, $Profile.Name = &apos;System Administrator&apos; ) ),
ISPICKVAL(WT_Is_Customer__c,&apos;Yes&apos;),ISBLANK(WT_Customer_Name_CRM__c))</errorConditionFormula>
        <errorMessage>Customer Name is Required</errorMessage>
    </validationRules>
</CustomObject>